--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="assets/PPaiFavicon.png" type="image/png">
+  <link rel="icon" href="https://propresence.ai/assets/PPaiFavicon.png" type="image/png">
   <title>Under Construction</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen px-4">
   <div class="text-center max-w-md bg-white p-8 rounded-2xl shadow-2xl">
     <!-- Logo -->
-    <img src="assets/PP_aiLogoTransparent1000.png" alt="ProPresence AI" class="mb-4 border-none mx-auto w-148 h-148 object-contain">
+    <img src="https://propresence.ai/assets/PP_aiLogoTransparent1000.png" alt="ProPresence AI" class="mb-4 border-none mx-auto w-148 h-148 object-contain">
 
     <!-- Main Message -->
     <h1 class="text-2xl font-bold text-gray-800 mb-4">We're under construction.</h1>
